[tool.poetry]
name = "rcheck"
version = "0.1.0"
description = ""
authors = ["Kapustin Alexander <akapustin@ambrahealth.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pika = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
